<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practical3.HotelsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_search"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawableEnd="@drawable/ic_clear"
            android:drawablePadding="8dp"
            android:drawableTint="#008AC9"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:inputType="text"/>

        <RadioGroup
            android:id="@+id/toggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_search"
            android:orientation="horizontal"
            android:padding="6dp">

            <RadioButton
                android:id="@+id/buttonShowMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_toggle_item"
                android:button="@null"
                android:checked="true"
                android:drawableStart="@drawable/baseline_map_24"
                android:drawablePadding="6dp"
                android:paddingVertical="10dp"
                android:paddingStart="16dp"
                android:text="@string/map"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/buttonShowList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_toggle_item"
                android:button="@null"
                android:drawableStart="@drawable/baseline_list_24"
                android:drawablePadding="6dp"
                android:paddingVertical="10dp"
                android:paddingStart="16dp"
                android:text="@string/list"
                android:textAlignment="center" />

        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHotels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</FrameLayout>