<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="hotel" type="com.example.hotelbooking.model.Hotel"/>
        <variable name="room" type="com.example.hotelbooking.model.Room"/>
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practical3.HotelDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:paddingBottom="80dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="416dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageHotel"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@{hotel.imageRes}"
                tools:src="@drawable/hotel_1"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingButtonLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_favorite_border_24"
                app:backgroundTint="#FFFFFF"
                app:fabCustomSize="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="24dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@{hotel.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageHotel"
                tools:text="назва готелю"/>

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="#FFAD00"
                android:rating="@={hotel.rating}"
                android:stepSize="0.5"
                tools:rating="4.5"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewName" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{String.valueOf(hotel.rating)}"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@id/ratingBar"
                app:layout_constraintTop_toTopOf="@id/ratingBar"
                tools:text="4.5"/>

            <TextView
                android:id="@+id/textViewReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{hotel.address}"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@id/textViewRating"
                app:layout_constraintTop_toTopOf="@id/ratingBar"
                tools:text="100 відгуків"/>

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="6dp"
                android:drawableTint="#008AC9"
                android:gravity="center_vertical"
                android:text="@{hotel.address}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"
                tools:text="адреса"/>

            <TextView
                android:id="@+id/textViewRoomsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/room_types_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLocation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewRoomsTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOpenMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:text="@string/on_map"
                android:textColor="#008AC9"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textViewLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewLocation"
                app:layout_constraintTop_toTopOf="@+id/textViewLocation"
                app:layout_constraintVertical_bias="0.458" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBarPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₴2 200/за ніч"
                android:textColor="#008AC9"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewGuestCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 гостей"
                android:textColor="#666"
                android:textSize="12sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#008AC9"
            android:text="@string/button_book"
            android:textSize="15sp"
            app:cornerRadius="50dp"
            app:icon="@drawable/baseline_calendar_month_24" />

    </LinearLayout>

</FrameLayout></layout>